Update SlotService.java